log
Thu 09 Mar 2023 03:40:37 PM UTC: 
 tests:  0|7
total_score: 0/70
df08056
Thu 09 Mar 2023 03:50:35 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ebdecda
Thu 09 Mar 2023 03:56:46 PM UTC: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:28:9: error: ‘max’ redeclared as different kind of symbol
   28 |     int max = 0;
      |         ^~~
exercises.c:27:42: note: previous definition of ‘max’ was here
   27 | void arrayMaxMin(int *array, int n, int *max, int *min) {
      |                                     ~~~~~^~~
exercises.c:29:9: error: ‘min’ redeclared as different kind of symbol
   29 |     int min = array[0];
      |         ^~~
exercises.c:27:52: note: previous definition of ‘min’ was here
   27 | void arrayMaxMin(int *array, int n, int *max, int *min) {
      |                                               ~~~~~^~~
exercises.c:32:5: error: expected expression before ‘}’ token
   32 |     }
      |     ^
exercises.c:29:9: error: unused variable ‘min’ [-Werror=unused-variable]
   29 |     int min = array[0];
      |         ^~~
exercises.c:28:9: error: unused variable ‘max’ [-Werror=unused-variable]
   28 |     int max = 0;
      |         ^~~
cc1: all warnings being treated as errors
Compilation failed
5f92420
Thu 09 Mar 2023 03:57:16 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
bd4cc74
Thu 09 Mar 2023 04:03:04 PM UTC: 
 exercises.c | 14 ++++++++++----
 1 file changed, 10 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:37:8: error: ‘mayor’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   37 |   *max = mayor;
      |   ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1ed6ff9
